# bufer-network

./: .gitignore  BuferNet.bat  Cargo.toml  LICENSE  README.md  build.rs  main.py  requirements.txt
.github/workflows/: release.yml
bufernet/: app.py  config.py  discovery.py  i18n.py  transfer.py
src/: autostart.rs  clipboard.rs  config.rs  discovery.rs  events.rs  hotkeys.rs  i18n.rs  icon.rs  json.rs  main.rs  transfer.rs  util.rs
src/ui/: dialogs.rs  mod.rs  render.rs  tray.rs
wix/: bufernet.wxs  license.rtf
